--- a/layouts/simple.html
+++ b/layouts/simple.html
@@ -15,8 +15,7 @@
 <header>
     <h1>
         <a href="/">
-            <img src="/images/logo.svg"/>
-            <span>Okrašlovací spolek<br/>v Holešovicích&ndash;Bubnech</span>
+            <img src="/images/hobutrol-logo.png "/>
         </a>
     </h1>
 </header>
