--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,1 +1,15 @@
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <title>Okrašlovací spolek v Holešovicích &ndash; Bubnech</title>
+    
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
+  </head>
+  <body>
+     {{ content }}
+  </body>
+</html>
