--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,8 @@
     
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>
     <meta name="msapplication-tap-highlight" content="no"/>
+    
+    <meta link="rel" href="/main.css"/>
   </head>
   <body>
      {{ content }}
