--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>
     <meta name="msapplication-tap-highlight" content="no"/>
     
-    <meta link="rel" href="/main.css"/>
+    <meta link="rel" href="{{ "/assets/css/main.css?v=" | append: site.github.build_revision | relative_url }}"/>
   </head>
   <body>
      {{ content }}
