--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,11 @@
     
   </head>
   <body>
-     {{ content }}
+    <main>
+      <header></header>
+      <section>
+        {{ content }}
+      </section>
+    </main>
   </body>
 </html>
