--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <header><img src="{{ "/assets/images/hobutrol-logo.svg" }}" alt="logo"/></header>
+      <header><img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/></header>
       <section>
         {{ content }}
       </section>
