--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,10 @@
   </head>
   <body>
     <main>
-      <header><img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/></header>
+      <header>
+        <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
+        <h1>Okrašlovací spolek <br/> v Holešovicích &ndash; Bubnech</h1>
+      </header>
       <section>
         {{ content }}
       </section>
