--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -8,5 +8,14 @@ body {
   > main {
     flex-direction: column;
     flex: 0 1 65rem;
+    
+    > header {
+      align-items: center;
+      
+      > h1 {
+        font-size: inherit;
+        line-height: 1.3rem;
+      }
+    }
   }
 }
