--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -14,6 +14,8 @@ body {
     flex-direction: column;
     flex: 0 1 65rem;
     
+    padding: 0 0.5rem;
+    
     > header {
       align-items: center;
       
