--- a/docs/_sass/_typography.scss
+++ b/docs/_sass/_typography.scss
@@ -2,7 +2,10 @@ html, body {
   font-size: 16px;
 }
 
-html, body {
+body {
+  background: white;
+  color: black;
+  
   font-family: Arial, sans-serif;
   line-height: 1.618rem;
 }
