--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,6 +19,13 @@
         <h1>Okrašlovací spolek <br/> v Holešovicích &ndash; Bubnech</h1>
       </header>
       <section>
+        <h1>O spolku</h1>
+        <p>Okrašlovací spolek v Holešovicích-Bubnech usiluje o zlepšení prostředí kolem nás.</p>
+        <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
+        <p>Dosud jsme byli pasivní jako vy ostatní – ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
+        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
+      </section>
+      <section>
         {{ content }}
       </section>
     </main>
