--- a/docs/_sass/_header.scss
+++ b/docs/_sass/_header.scss
@@ -11,7 +11,9 @@ main > header {
   > h1 {
     font-size: inherit;
     line-height: 1.3rem;
-    
-    margin: 2rem 0 1rem;
   }
+}
+
+main > section > h1 {
+  margin: 2rem 0 1rem;
 }
