--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
         <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
         <h1>Okrašlovací spolek <br/> v Holešovicích &ndash; Bubnech</h1>
       </header>
-      <section>
+      <section class="smaller-text">
         <h1>O spolku</h1>
         <p>Okrašlovací spolek v Holešovicích-Bubnech usiluje o zlepšení prostředí kolem nás.</p>
         <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
