--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,14 +16,14 @@
     <main>
       <header>
         <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
-        <h1>Okrašlovací spolek <br/> v Holešovicích &ndash; Bubnech</h1>
+        <h1>Okrašlovací spolek <br/> v Holešovicích&nbsp;&ndash;&nbsp;Bubnech</h1>
       </header>
       <section class="smaller-text">
         <h1>Okrašluji, tedy jsem</h1>
-        <p>Okrašlovací spolek v Holešovicích-Bubnech usiluje o zlepšení prostředí kolem nás.</p>
+        <p>Okrašlovací spolek v Holešovicích&nbsp;-&nbsp;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
         <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
-        <p>Dosud jsme byli pasivní jako vy ostatní – ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
-        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
+        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
+        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
       </section>
       <section>
         {{ content }}
