--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
         <h1>Okrašlovací spolek <br/> v Holešovicích&nbsp;&ndash;&nbsp;Bubnech</h1>
       </header>
       <section class="caption">
-        <h1>Okrašluji, tedy jsem</h1>
+        <h1>Okrašlujeme, tedy jsme</h1>
         <p>Okrašlovací spolek v Holešovicích&nbsp;&ndash;&nbsp;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
         <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
         <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
