--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-    <title>Okrašlovací spolek v Holešovicích &ndash; Bubnech</title>
+    <title>Okrašlovací spolek v Holešovicích&ndash;Bubnech</title>
     
     <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>-->
     <meta name="msapplication-tap-highlight" content="no"/>
@@ -16,11 +16,11 @@
     <main>
       <header>
         <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
-        <h1>Okrašlovací spolek <br/> v Holešovicích&nbsp;&ndash;&nbsp;Bubnech</h1>
+        <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
       </header>
       <section class="caption">
         <h1>Okrašlujeme, tedy jsme</h1>
-        <p>Okrašlovací spolek v Holešovicích&nbsp;&ndash;&nbsp;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
+        <p>Okrašlovací spolek v Holešovicích&ndash;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
         <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
         <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
         <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
