--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,8 +15,10 @@
   <body>
     <main>
       <header>
-        <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
-        <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
+        <a href="{{ "/" | relative_url }}">
+          <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
+          <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
+        </a>
       </header>
       <section class="caption">
         <h1>Okrašlujeme, tedy jsme</h1>
