--- a/docs/_sass/_header.scss
+++ b/docs/_sass/_header.scss
@@ -2,6 +2,8 @@ main > header {
   align-items: center;
   
   > a {
+    display: flex;
+    
     color: inherit;
     text-decoration: inherit;
     
