--- a/docs/_sass/_typography.scss
+++ b/docs/_sass/_typography.scss
@@ -10,6 +10,14 @@ body {
   line-height: 1.618rem;
 }
 
+a {
+  transition: background-color 300ms;
+  
+  &:hover {
+    background-color: #ccc;
+  }
+}
+
 section.caption { 
   > p {
     font-size: .85rem;
