--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <title>Okrašlovací spolek v Holešovicích&ndash;Bubnech</title>
-    
-    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self';"/>-->
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
     <meta name="msapplication-tap-highlight" content="no"/>
     
     <link rel="stylesheet" href="{{ "/assets/css/main.css?v=" | append: site.github.build_revision | relative_url }}"/>
