Adding some more details.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,5 +31,25 @@
         {{ content }}
       </section>
     </main>
+    <footer>
+          <header>
+            Okrašlovací spolek v Holešovicích–Bubnech
+          </header>
+          <p>
+            Schnirchova 1084/29<br>
+            Holešovice<br>
+            170 00 Praha 7
+          </p>
+          <p>
+            IČO: 0298&nbsp;8470<br>
+            Spisová značka: L 60739 vedená u Městského soudu v Praze
+          </p>
+        </div>
+        <div>
+          <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@oshb.cz</a></p>
+        </div>
+      </section>
+    </footer>
+
   </body>
 </html>
