Adding some more details.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
@@ -9,49 +9,47 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
     <meta name="msapplication-tap-highlight" content="no"/>
 
-    <link rel="stylesheet" href="{{ "
-    /assets/css/main.css?v=" | append: site.github.build_revision | relative_url }}"/>
+    <link rel="stylesheet" href="{{ "/assets/css/main.css?v=" | append: site.github.build_revision | relative_url }}"/>
 
-</head>
-<body>
-<main>
-    <header>
+  </head>
+  <body>
+    <main>
+      <header>
         <a href="{{ "/" | relative_url }}">
-        <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
-        <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
+          <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
+          <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
         </a>
-    </header>
-    <section class="caption">
+      </header>
+      <section class="caption">
         <h1>Okrašlujeme, tedy jsme</h1>
         <p>Okrašlovací spolek v Holešovicích&ndash;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
-        <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v
-            ulicích se nám zdála již více nesnesitelnou.</p>
-        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco
-            uděláme společně.</p>
-        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod
-            Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
-    </section>
-    <section>
+        <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
+        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
+        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
+      </section>
+      <section>
         {{ content }}
-    </section>
+      </section>
 
-    <footer>
+      <footer>
         <header>
-            Okrašlovací spolek v Holešovicích–Bubnech
+          Okrašlovací spolek v Holešovicích–Bubnech
         </header>
         <p>
-            Schnirchova 1084/29<br>
-            Holešovice<br>
-            170 00 Praha 7
+          Schnirchova 1084/29<br>
+          Holešovice<br>
+          170 00 Praha 7
         </p>
         <p>
-            IČO: 0298&nbsp;8470<br>
-            Spisová značka: L 60739 vedená u Městského soudu v Praze
+          IČO: 0298&nbsp;8470<br>
+          Spisová značka: L 60739 vedená u Městského soudu v Praze
         </p>
-        <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@oshb.cz</a></p>
-    </footer>
 
-</main>
+          <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@oshb.cz</a></p>
 
-</body>
+      </footer>
+
+    </main>
+
+  </body>
 </html>
