--- a/docs/_sass/_header.scss
+++ b/docs/_sass/_header.scss
@@ -23,4 +23,8 @@ main > header {
 
 main > section > h1 {
   margin: 4.854rem 0 1.618rem;
+
+  @media (min-width: 800px) {
+    margin-bottom: 0.809rem;
+  }
 }
