Adding some more details.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -35,7 +35,7 @@
         <header>
           Okrašlovací spolek v Holešovicích–Bubnech
         </header>
-        <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@oshb.cz</a></p>
+        <p>Email: <a href="mailto:spravni-rada@oshb.cz">spravni-rada@oshb.cz</a></p>
         <p>
           Schnirchova 1084/29<br>
           Holešovice<br>
