Adding some more details.

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -20,6 +20,7 @@
           <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
         </a>
       </header>
+
       <section class="caption">
         <h1>Okrašlujeme, tedy jsme</h1>
         <p>Okrašlovací spolek v Holešovicích&ndash;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
@@ -27,9 +28,11 @@
         <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
         <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
       </section>
-      <section>
-        {{ content }}
+      <section class="stanovy">
+        <p><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
       </section>
+
+      {{ content }}
 
       <footer>
         <header>
