--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -32,7 +32,9 @@
         <p><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
       </section>
 
-      {{ content }}
+      <section>
+        {{content}}
+      </section>
 
       <footer>
         <header>
