Add some nb sps

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -23,10 +23,10 @@
 
       <section class="caption">
         <h1>Okrašlujeme, tedy jsme</h1>
-        <p>Okrašlovací spolek v Holešovicích&ndash;Bubnech usiluje o zlepšení prostředí kolem nás.</p>
-        <p>Na počátku stála sdílená nepohoda z přístupu některých chovatelů psů k provozování jejich koníčka. Špína v ulicích se nám zdála již více nesnesitelnou.</p>
-        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v nás zlomilo a řekli jsme si, že s tím něco uděláme společně.</p>
-        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování či podpora dalších prospěšných místních aktivit.</p>
+        <p>Okrašlovací spolek v&nbsp;Holešovicích&ndash;Bubnech usiluje o&nbsp;zlepšení prostředí kolem nás.</p>
+        <p>Na&nbsp;počátku stála sdílená nepohoda z&nbsp;přístupu některých chovatelů psů k&nbsp;provozování jejich koníčka. Špína v&nbsp;ulicích se nám zdála již více nesnesitelnou.</p>
+        <p>Dosud jsme byli pasivní jako vy ostatní&nbsp;&ndash; ale něco se v&nbsp;nás zlomilo a řekli jsme si, že s&nbsp;tím něco uděláme společně.</p>
+        <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování, či&nbsp;podpora dalších prospěšných místních aktivit.</p>
       </section>
       <section class="stanovy">
         <p><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
@@ -38,17 +38,17 @@
 
       <footer>
         <header>
-          Okrašlovací spolek v Holešovicích–Bubnech
+          Okrašlovací spolek v&nbsp;Holešovicích–Bubnech
         </header>
         <p>Email: <a href="mailto:spravni-rada@oshb.cz">spravni-rada@oshb.cz</a></p>
         <p>
-          Schnirchova 1084/29<br>
+          Schnirchova&nbsp;1084/29<br>
           Holešovice<br>
-          170 00 Praha 7
+          170&nbsp;00 Praha&nbsp;7
         </p>
         <p>
           IČO: 0298&nbsp;8470<br>
-          Spisová značka: L 60739 vedená u Městského soudu v Praze
+          Spisová značka: L 60739 vedená u&nbsp;Městského soudu v Praze
         </p>
       </footer>
 
