some more style

--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <header>
-        <a href="{{ "/" | relative_url }}">
+        <a class="button" href="{{ "/" | relative_url }}">
           <img src="{{ "/assets/images/hobutrol-logo.svg" | relative_url }}" alt="logo"/>
           <h1>Okrašlovací spolek <br/> v Holešovicích&ndash;Bubnech</h1>
         </a>
@@ -29,7 +29,7 @@
         <p>Na nosnou základní linii spolkového života se brzy nabalilo mnoho dalších aktivit, třeba tradiční jarní závod Otvírání&nbsp;studánek, komunitní schůzování, či&nbsp;podpora dalších prospěšných místních aktivit.</p>
       </section>
       <section class="stanovy">
-        <p><a href="assets/stanovy.pdf">Stanovy spolku</a></p>
+        <p><a class="button" href="assets/stanovy.pdf">Stanovy spolku</a></p>
       </section>
 
       <section>
