--- a/docs/_sass/_typography.scss
+++ b/docs/_sass/_typography.scss
@@ -20,7 +20,7 @@ a {
 
   display: inline-block;
   line-height: 1rem;
-  padding-bottom: .2rem;
+  padding-bottom: $module-quarter;
 
   transition: border-bottom 300ms;
 
@@ -28,14 +28,16 @@ a {
     border-bottom-color: inherit;
   }
 
-
-
   &.button {
     border-bottom: 0 none;
     padding-bottom: 0;
 
     color: inherit;
   }
+}
+
+footer a {
+  padding-bottom: 0.8 * $module-quarter;
 }
 
 
