--- a/docs/_sass/_home.scss
+++ b/docs/_sass/_home.scss
@@ -16,25 +16,25 @@ section.stanovy {
     font-size: .9rem;
     margin: $module 0;
 
-    > a {
-      //display: inline-block;
-      background-image: url("../images/stanovy.svg");
-      background-repeat: no-repeat;
-      background-position: $module-quarter center;
-      background-size: auto 70%;
-      padding: 3 * $module-quarter 3 * $module-quarter 3 * $module-quarter 2.5 * $module;
-      align-items: center;
-
-      height: $module;
-      line-height: $module;
-
-      border: 1px solid #0cc;
-
-      color: #009999;
-
-      &:hover {
-        border-color: inherit;
-      }
-    }
+    //> a {
+    //  //display: inline-block;
+    //  background-image: url("../images/stanovy.svg");
+    //  background-repeat: no-repeat;
+    //  background-position: $module-quarter center;
+    //  background-size: auto 70%;
+    //  padding: 3 * $module-quarter 3 * $module-quarter 3 * $module-quarter 2.5 * $module;
+    //  align-items: center;
+    //
+    //  height: $module;
+    //  line-height: $module;
+    //
+    //  border: 1px solid #0cc;
+    //
+    //  color: #009999;
+    //
+    //  &:hover {
+    //    border-color: inherit;
+    //  }
+    //}
   }
 }
